--- a/Notebooks/Downloading data from Kaggle.ipynb
+++ b/Notebooks/Downloading data from Kaggle.ipynb
@@ -105,27 +105,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "404 - Not Found\r\n"
+      "Downloading sample_submission_v2.csv to /home/ec2-user/SageMaker/ship-detection/Notebooks\n",
+      "  0%|                                                | 0.00/274k [00:00<?, ?B/s]\n",
+      "100%|████████████████████████████████████████| 274k/274k [00:00<00:00, 23.0MB/s]\n",
+      "Downloading train_ship_segmentations_v2.csv.zip to /home/ec2-user/SageMaker/ship-detection/Notebooks\n",
+      " 78%|█████████████████████████████▌        | 14.0M/18.0M [00:00<00:00, 19.1MB/s]\n",
+      "100%|██████████████████████████████████████| 18.0M/18.0M [00:00<00:00, 24.6MB/s]\n",
+      "Downloading test_v2.zip to /home/ec2-user/SageMaker/ship-detection/Notebooks\n",
+      "100%|█████████████████████████████████████▉| 2.12G/2.12G [01:25<00:00, 14.9MB/s]\n",
+      "100%|██████████████████████████████████████| 2.12G/2.12G [01:25<00:00, 26.5MB/s]\n",
+      "Downloading train_v2.zip to /home/ec2-user/SageMaker/ship-detection/Notebooks\n",
+      "100%|█████████████████████████████████████▉| 26.4G/26.4G [13:39<00:00, 47.4MB/s]\n",
+      "100%|██████████████████████████████████████| 26.4G/26.4G [13:39<00:00, 34.6MB/s]\n"
      ]
     }
    ],
    "source": [
-    "!kaggle datasets files airbus-ship-detection/data"
+    "!kaggle competitions download -c airbus-ship-detection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ref                                                         title                                                size  lastUpdated          downloadCount  voteCount  usabilityRating  \r\n",
+      "----------------------------------------------------------  --------------------------------------------------  -----  -------------------  -------------  ---------  ---------------  \r\n",
+      "new-york-state/nys-environmental-remediation-sites          NYS Environmental Remediation Sites                   3MB  2019-07-31 08:23:12           1429         79  0.852941155      \r\n",
+      "google/google-landmarks-dataset                             Google-Landmarks Dataset                            107MB  2019-07-31 12:00:25          10092        344  0.8235294        \r\n",
+      "new-york-city/new-york-city-current-job-postings            New York City Current Job Postings                    3MB  2019-07-28 22:04:53           4976        117  0.852941155      \r\n",
+      "AnalyzeBoston/crimes-in-boston                              Crimes in Boston                                     10MB  2018-09-04 17:56:03           5394        128  0.8235294        \r\n",
+      "jealousleopard/goodreadsbooks                               Goodreads-books                                     632KB  2019-06-14 16:35:05           5763        253  1.0              \r\n",
+      "sudalairajkumar/chennai-water-management                    Chennai Water Management                             75KB  2019-06-19 03:42:44           4422        171  1.0              \r\n",
+      "wkirgsn/electric-motor-temperature                          Electric Motor Temperature                           47MB  2019-06-19 11:12:41           2336         85  1.0              \r\n",
+      "matheusfreitag/gas-prices-in-brazil                         Gas Prices in Brazil                                  3MB  2019-07-12 16:23:52           3440        104  1.0              \r\n",
+      "r3w0p4/recorded-crime-data-at-police-force-area-level       Recorded Crime Data at the Police Force Area Level  300KB  2019-06-21 15:16:46           1218         17  1.0              \r\n",
+      "jolasa/waves-measuring-buoys-data-mooloolaba                Waves Measuring Buoys Data                          599KB  2019-07-07 16:59:44            563         12  1.0              \r\n",
+      "eliasdabbas/search-engine-results-flights-tickets-keywords  Search Engine Results - Flights & Tickets Keywords   21MB  2019-07-15 11:46:54            958         29  0.9117647        \r\n",
+      "doit-intl/autotel-shared-car-locations                      Shared Cars Locations                                78MB  2019-01-10 13:06:00            607         25  0.8235294        \r\n",
+      "Madgrades/uw-madison-courses                                UW Madison Courses and Grades 2006-2017              90MB  2018-05-15 18:58:25           1085         33  0.852941155      \r\n",
+      "r3w0p4/bournemouth-venues                                   Venues in Bournemouth                                 3KB  2019-07-08 14:26:48            458         23  1.0              \r\n",
+      "datafiniti/womens-shoes-prices                              Women's Shoe Prices                                  12MB  2019-06-24 22:50:14           8943        172  0.852941155      \r\n",
+      "university-of-edinburgh/peace-agreements-dataset            Peace Agreements Dataset                              1MB  2018-03-05 16:39:50            458         27  0.7647059        \r\n",
+      "citizen-ds-ghana/health-facilities-gh                       Ghana Health Facilities                              84KB  2018-09-03 01:19:24            545         19  0.882352948      \r\n",
+      "inIT-OWL/vega-shrinkwrapper-runtofailure-data               Vega shrink-wrapper component degradation           408KB  2018-11-12 13:03:43            209         15  0.882352948      \r\n",
+      "datafiniti/pizza-restaurants-and-the-pizza-they-sell        Pizza Restaurants and the Pizza They Sell           850KB  2019-05-30 00:21:21           3849         66  0.7647059        \r\n",
+      "citylines/city-lines                                        Transit systems of world                              3MB  2019-03-25 16:53:05           1433         43  0.7647059        \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sagemaker\n",
+    "from sagemaker import get_execution_role\n",
+    "import json\n",
+    "import boto3\n",
+    "\n",
+    "sess = sagemaker.Session()\n",
+    "\n",
+    "role = get_execution_role()\n",
+    "print(role) # This is the role that SageMaker would use to leverage AWS resources (S3, CloudWatch) on your behalf\n",
+    "\n",
+    "bucket = sess.default_bucket() # Replace with your own bucket name if needed\n",
+    "print(bucket)\n",
+    "prefix = 'ship_detection' #Replace with the prefix under which you want to store the data if needed\n",
+    "train_img = prefix + '/train/sample'\n",
+    "train_img = prefix + '/train/train_annotation'\n",
+    "train_channel = prefix + '/train'\n",
+    "validation_channel = prefix + '/validation'\n",
+    "\n",
+    "sess.upload_data(path='dbpedia.train', bucket=bucket, key_prefix=train_channel)\n",
+    "sess.upload_data(path='dbpedia.validation', bucket=bucket, key_prefix=validation_channel)"
+   ]
   }
  ],
  "metadata": {
