--- a/Notebooks/Downloading data from Kaggle.ipynb
+++ b/Notebooks/Downloading data from Kaggle.ipynb
@@ -180,14 +180,16 @@
     "\n",
     "bucket = sess.default_bucket() # Replace with your own bucket name if needed\n",
     "print(bucket)\n",
-    "prefix = 'ship_detection' #Replace with the prefix under which you want to store the data if needed\n",
-    "train_img = prefix + '/train/sample'\n",
-    "train_img = prefix + '/train/train_annotation'\n",
-    "train_channel = prefix + '/train'\n",
-    "validation_channel = prefix + '/validation'\n",
     "\n",
-    "sess.upload_data(path='dbpedia.train', bucket=bucket, key_prefix=train_channel)\n",
-    "sess.upload_data(path='dbpedia.validation', bucket=bucket, key_prefix=validation_channel)"
+    "# use cli\n",
+    "# prefix = 'ship_detection' #Replace with the prefix under which you want to store the data if needed\n",
+    "# train_img = prefix + '/train/sample_image'\n",
+    "# train_channel = prefix + '/train/train_annotation'\n",
+    "# # validation_channel = prefix + '/validation'\n",
+    "\n",
+    "# sess.upload_data(path='../Data/train/sample_image', bucket=bucket, key_prefix=train_img)\n",
+    "# sess.upload_data(path='../Data/train/train_annotation', bucket=bucket, key_prefix=train_channel)\n",
+    "# # sess.upload_data(path='../Data/', bucket=bucket, key_prefix=validation_channel)"
    ]
   }
  ],
