--- a/Notebooks/hicks_sandbox.ipynb
+++ b/Notebooks/hicks_sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "4  000194a2d.jpg  51834 9 52602 9 53370 9 54138 9 54906 9 55674 ..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,6 +79,300 @@
     "\n",
     "df = pd.read_csv('../Data/train_ship_segmentations_v2.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(231723, 2)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ImageId</th>\n",
+       "      <th>EncodedPixels</th>\n",
+       "      <th>is_empty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00003e153.jpg</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0001124c7.jpg</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000155de5.jpg</td>\n",
+       "      <td>264661 17 265429 33 266197 33 266965 33 267733...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000194a2d.jpg</td>\n",
+       "      <td>360486 1 361252 4 362019 5 362785 8 363552 10 ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000194a2d.jpg</td>\n",
+       "      <td>51834 9 52602 9 53370 9 54138 9 54906 9 55674 ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ImageId                                      EncodedPixels  is_empty\n",
+       "0  00003e153.jpg                                                NaN         1\n",
+       "1  0001124c7.jpg                                                NaN         1\n",
+       "2  000155de5.jpg  264661 17 265429 33 266197 33 266965 33 267733...         0\n",
+       "3  000194a2d.jpg  360486 1 361252 4 362019 5 362785 8 363552 10 ...         0\n",
+       "4  000194a2d.jpg  51834 9 52602 9 53370 9 54138 9 54906 9 55674 ...         0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "df['is_empty'] = np.where(df['EncodedPixels'].isna(), 1, 0)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: opencv-python in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (4.1.0.25)\n",
+      "Requirement already satisfied: numpy>=1.11.3 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from opencv-python) (1.15.4)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (4.32.2)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(81723, 3)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_with_ship = df.loc[df['is_empty'] == False]\n",
+    "images_with_ship.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trying to get bounding box coords\n",
+    "\n",
+    "# import os\n",
+    "# import cv2\n",
+    "# from tqdm import tqdm\n",
+    "# import numpy as np # linear algebra\n",
+    "# import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "# from skimage.io import imread\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from skimage.segmentation import mark_boundaries\n",
+    "# from skimage.measure import label, regionprops\n",
+    "# from skimage.util.montage import montage2d as montage\n",
+    "\n",
+    "# # montage_rgb = lambda x: np.stack([montage(x[:, :, :, i]) for i in range(x.shape[3])], -1)\n",
+    "# # ship_dir = '../input'\n",
+    "# # train_image_dir = 'trainimages'\n",
+    "# # test_image_dir = 'testimages'\n",
+    "\n",
+    "# def rle_decode(mask_rle, shape=(768, 768)):\n",
+    "#     '''\n",
+    "#     mask_rle: run-length as string formated (start length)\n",
+    "#     shape: (height,width) of array to return \n",
+    "#     Returns numpy array, 1 - mask, 0 - background\n",
+    "#     '''\n",
+    "#     s = mask_rle.split()\n",
+    "#     starts, lengths = [np.asarray(x, dtype=int) for x in (s[0:][::2], s[1:][::2])]\n",
+    "#     starts -= 1\n",
+    "#     ends = starts + lengths\n",
+    "#     img = np.zeros(shape[0]*shape[1], dtype=np.uint8)\n",
+    "#     for lo, hi in zip(starts, ends):\n",
+    "#         img[lo:hi] = 1\n",
+    "#     return img.reshape(shape).T  # Needed to align to RLE direction\n",
+    "\n",
+    "\n",
+    "# def masks_as_image(in_mask_list, all_masks=None):\n",
+    "#     # Take the individual ship masks and create a single mask array for all ships\n",
+    "#     if all_masks is None:\n",
+    "#         all_masks = np.zeros((768, 768), dtype = np.int16)\n",
+    "#     #if isinstance(in_mask_list, list):\n",
+    "#     for mask in in_mask_list:\n",
+    "#         if isinstance(mask, str):\n",
+    "#             all_masks += rle_decode(mask)\n",
+    "#     return np.expand_dims(all_masks, -1)\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "import numpy as np # linear algebra\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "from skimage.io import imread\n",
+    "import matplotlib.pyplot as plt\n",
+    "from skimage.segmentation import mark_boundaries\n",
+    "from skimage.util.montage import montage2d as montage\n",
+    "\n",
+    "montage_rgb = lambda x: np.stack([montage(x[:, :, :, i]) for i in range(x.shape[3])], -1)\n",
+    "ship_dir = '../input'\n",
+    "train_image_dir = os.path.join(ship_dir, 'train_v2')\n",
+    "test_image_dir = os.path.join(ship_dir, 'test_v2')\n",
+    "\n",
+    "import gc; gc.enable() # memory is tight\n",
+    "from skimage.morphology import label\n",
+    "\n",
+    "def multi_rle_encode(img):\n",
+    "    labels = label(img[:, :, 0])\n",
+    "    return [rle_encode(labels==k) for k in np.unique(labels[labels>0])]\n",
+    "\n",
+    "\n",
+    "def rle_encode(img):\n",
+    "    '''\n",
+    "    img: numpy array, 1 - mask, 0 - background\n",
+    "    Returns run length as string formated\n",
+    "    '''\n",
+    "    pixels = img.T.flatten()\n",
+    "    pixels = np.concatenate([[0], pixels, [0]])\n",
+    "    runs = np.where(pixels[1:] != pixels[:-1])[0] + 1\n",
+    "    runs[1::2] -= runs[::2]\n",
+    "    return ' '.join(str(x) for x in runs)\n",
+    "\n",
+    "\n",
+    "def rle_decode(mask_rle, shape=(768, 768)):\n",
+    "    '''\n",
+    "    mask_rle: run-length as string formated (start length)\n",
+    "    shape: (height,width) of array to return \n",
+    "    Returns numpy array, 1 - mask, 0 - background\n",
+    "    '''\n",
+    "    s = mask_rle.split()\n",
+    "    starts, lengths = [np.asarray(x, dtype=int) for x in (s[0:][::2], s[1:][::2])]\n",
+    "    starts -= 1\n",
+    "    ends = starts + lengths\n",
+    "    img = np.zeros(shape[0]*shape[1], dtype=np.uint8)\n",
+    "    for lo, hi in zip(starts, ends):\n",
+    "        img[lo:hi] = 1\n",
+    "    return img.reshape(shape).T  # Needed to align to RLE direction\n",
+    "\n",
+    "\n",
+    "def masks_as_image(in_mask_list):\n",
+    "    # Take the individual ship masks and create a single mask array for all ships\n",
+    "    all_masks = np.zeros((768, 768), dtype = np.int16)\n",
+    "    #if isinstance(in_mask_list, list):\n",
+    "    for mask in in_mask_list:\n",
+    "        if isinstance(mask, str):\n",
+    "            all_masks += rle_decode(mask)\n",
+    "    return np.expand_dims(all_masks, -1)\n",
+    "\n",
+    "\n",
+    "for i, image in images_with_ship.iterrows():\n",
+    "    if i > 10:\n",
+    "        break\n",
+    "    fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize = (15, 5))\n",
+    "    rle_0 = image['EncodedPixels']\n",
+    "    mask_0 = masks_as_image(rle_0)\n",
+    "    #\n",
+    "    # \n",
+    "    print(image)\n",
+    "    lbl_0 = label(mask_0) \n",
+    "    props = regionprops(lbl_0)\n",
+    "    for prop in props:\n",
+    "        print('Found bbox', prop.bbox)\n",
+    "#         cv2.rectangle(img_1, (prop.bbox[1], prop.bbox[0]), (prop.bbox[3], prop.bbox[2]), (255, 0, 0), 2)\n"
    ]
   },
   {
