--- a/Notebooks/ship-data-transformation.ipynb
+++ b/Notebooks/ship-data-transformation.ipynb
@@ -99,7 +99,7 @@
     "from skimage.measure import label, regionprops\n",
     "from skimage.util.montage import montage2d as montage\n",
     "montage_rgb = lambda x: np.stack([montage(x[:, :, :, i]) for i in range(x.shape[3])], -1)\n",
-    "ship_dir = '../input'\n",
+    "ship_dir = '../Data'\n",
     "train_image_dir = 'trainimages'\n",
     "test_image_dir = 'testimages'\n",
     "\n",
